--- a/appinfo.json
+++ b/appinfo.json
@@ -88,6 +88,7 @@
     "sdkVersion": "3",
     "shortName": "ANTONIO-MARVIN_2.0.COLOUR",
     "targetPlatforms": [
+        "aplite",
         "basalt"
     ],
     "uuid": "5be48544-b876-48c2-bd53-bec519358d77",
